# ChangeLog for net-libs/xulrunner
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/Attic/ChangeLog,v 1.270 2009/11/09 12:32:14 fauli Exp $

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  xulrunner-1.9.1.4.ebuild:
  stable x86, security bug 280393

*xulrunner-1.9.1.5 (07 Nov 2009)

  07 Nov 2009; Jory A. Pratt <anarchy@gentoo.org> +xulrunner-1.9.1.5.ebuild:
  security bump

  04 Nov 2009; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.14.ebuild:
  Add hack for ARM EABI

  04 Nov 2009; Jory A. Pratt <anarchy@gentoo.org> xulrunner-1.9.1.4.ebuild:
  apply patch in topsrc dir bug #291797

  04 Nov 2009; Thomas Anderson <tanderson@gentoo.org>
  xulrunner-1.9.1.4.ebuild:
  stable amd64, as requested by Anarchy.

  01 Nov 2009; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.1.4.ebuild:
  External sqlite needs to be 3.6.16

  30 Oct 2009; Jeroen Roovers <jer@gentoo.org> xulrunner-1.9.1.4.ebuild:
  Stable for HPPA (bug #290892).

  30 Oct 2009; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.13.ebuild,
  xulrunner-1.9.0.14.ebuild:
  Mark -sparc as it sigbuses

  30 Oct 2009; Jeroen Roovers <jer@gentoo.org> xulrunner-1.9.1.4.ebuild:
  Reverting.

  30 Oct 2009; Jeroen Roovers <jer@gentoo.org> xulrunner-1.9.1.4.ebuild:
  Stable for HPPA (bug #290892).

  29 Oct 2009; Jory A. Pratt <anarchy@gentoo.org> xulrunner-1.9.1.4.ebuild:
  fix typo reported by former developer gothgirl

*xulrunner-1.9.1.4 (29 Oct 2009)

  29 Oct 2009; Jory A. Pratt <anarchy@gentoo.org> +xulrunner-1.9.1.4.ebuild:
  update for security bug fixes.

  25 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  -xulrunner-1.9.1.2-r2.ebuild, xulrunner-1.9.1.3-r1.ebuild:
  Mark correct version stable for amd64.

  25 Oct 2009; Jory A. Pratt <anarchy@gentoo.org>
  +xulrunner-1.9.1.2-r2.ebuild:
  revert removal of xulrunner-1.9.1.2-r2

*xulrunner-1.9.1.3-r1 (25 Oct 2009)

  25 Oct 2009; Jory A. Pratt <anarchy@gentoo.org>