@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/Attic/xulrunner-1.9.1.5.ebuild,v 1.1 2009/11/07 01:42:15 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/Attic/xulrunner-1.9.1.5.ebuild,v 1.2 2009/11/11 00:45:41 anarchy Exp $
 
 EAPI="2"
 WANT_AUTOCONF="2.1"
@@ -11,7 +11,7 @@ MY_PV="${PV/_beta/b}" # Handle betas
 MY_PV="${PV/_/}" # Handle rc1, rc2 etc
 MY_PV="${MY_PV/1.9.1.5/3.5.5}"
 MAJ_PV="1.9.1" # from mozilla-* branch name
-PATCH="${PN}-1.9.1.4-patches-0.1"
+PATCH="${PN}-1.9.1.5-patches-0.1"
 
 DESCRIPTION="Mozilla runtime package that can be used to bootstrap XUL+XPCOM applications"
 HOMEPAGE="http://developer.mozilla.org/en/docs/XULRunner"
@@ -46,12 +46,6 @@ DEPEND="java? ( >=virtual/jdk-1.4 )
 	dev-util/pkgconfig"
 
 S="${WORKDIR}/mozilla-${MAJ_PV}"
-
-# Needed by src_compile() and src_install().
-# Would do in pkg_setup but that loses the export attribute, they
-# become pure shell variables.
-export BUILD_OFFICIAL=1
-export MOZILLA_OFFICIAL=1
 
 pkg_setup() {
 	java-pkg-opt-2_pkg_setup
