@@ -1,6 +1,11 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.568 2009/11/09 12:49:59 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.569 2009/11/11 00:45:55 anarchy Exp $
+
+  11 Nov 2009; Jory A. Pratt <anarchy@gentoo.org>
+  mozilla-firefox-3.5.5.ebuild:
+  bump patchset to include nanojit.patch from upstream for sparc support,
+  remove exports from ebuild that are no longer needed.
 
   09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
   mozilla-firefox-3.5.4.ebuild:
