@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/Attic/ChangeLog,v 1.270 2009/11/09 12:32:14 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/Attic/ChangeLog,v 1.271 2009/11/11 00:45:41 anarchy Exp $
+
+  11 Nov 2009; Jory A. Pratt <anarchy@gentoo.org> xulrunner-1.9.1.5.ebuild:
+  bump patchset to include nanojit.patch from upstream for sparc support,
+  remove exports from ebuild that are no longer needed.
 
   09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
   xulrunner-1.9.1.4.ebuild:
